<resources>
    <string name="app_name">NOW_START_UP</string>
    <string name="imageplace">Profile Photo</string>
    <string name="text">Holder</string>
    <string name="ad_text">Ad:</string>
    <string name="soyad_text">Soyad:</string>
    <string name="bonus">Bonusuzun:</string>
    <string name="kamera">Tara</string>
    <string name="list">Keçmiş</string>
    <string name="alisveris">Alış-Veriş</string>
    <string name="daxilol">Daxil Ol</string>



</resources>
