<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnaMenu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageplace"
        android:foreground="@drawable/rounded"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/men" />

    <TextView
        android:id="@+id/NameHolder"
        android:layout_width="48dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/text"
        android:text="@string/ad_text"
        android:textColor="@color/blackgray"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/SurnameHolder"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/soyad_text"
        android:textColor="@color/blackgray"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/NameHolder" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bonus"
        android:textAlignment="viewStart"
        android:textColor="@color/blackgray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SurnameHolder"
        app:layout_constraintTop_toBottomOf="@+id/SurnameHolder" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="161dp"
        android:layout_height="50dp"
        android:layout_marginBottom="56dp"
        android:text="500"
        android:textAlignment="center"
        android:textColor="@color/blackgray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/listbtn"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/listbtn"
        android:fontFamily="serif"
        android:text="@string/list"
        android:textAllCaps="false"
        android:textColor="@color/blackgray"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/alisveris"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/listbtn"
        android:fontFamily="serif"
        android:text="@string/alisveris"
        android:textAllCaps="false"
        android:textColor="@color/blackgray"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/camerabtn"
        android:layout_width="88dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbtn"
        android:padding="10dp"
        android:text="@string/kamera"
        android:onClick="scanQR"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Ad"
        android:layout_width="133dp"
        android:layout_height="27dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/blackgray"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/NameHolder"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Soyad"
        android:layout_width="119dp"
        android:layout_height="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/blackgray"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/SurnameHolder"
        app:layout_constraintTop_toBottomOf="@+id/Ad" />

</android.support.constraint.ConstraintLayout>